[project]
name = "mcp-rememberizer-vectordb"
version = "0.1.1"
description = "A Model Context Protocol server for interacting with Rememberizer Vector Store (https://docs.rememberizer.ai/developer/vector-stores)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "httpx>=0.27.2",
 "mcp>=1.0.0",
 "python-dotenv>=1.0.1",
]
[[project.authors]]
name = "Rememberizer"
email = "support@rememberizer.ai"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.389",
]

[project.scripts]
mcp-rememberizer-vectordb = "mcp_rememberizer_vectordb:main"

# ==== isort ====
[tool.isort]
profile = "black"
line_length = 118
